--- a/app/src/main/res/layout/bookreport.xml
+++ b/app/src/main/res/layout/bookreport.xml
@@ -15,6 +15,20 @@
         android:gravity="center"
         android:padding="16dp" />
 
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end"
+        android:layout_marginEnd="16dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/rounded_button"
+        android:backgroundTint="#DDDDDD"
+        android:paddingHorizontal="16dp"
+        android:text="책 등록하기"
+        android:textColor="#000000"
+        android:textStyle="bold" />
+
     <!-- 구분선 -->
     <View
         android:layout_width="match_parent"
@@ -24,6 +38,7 @@
     <!-- 책 정보: 이미지 + 텍스트 수평 배치 -->
 
     <!-- 마음에 드는 구절 -->
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -35,7 +50,7 @@
 
         <ImageView
             android:id="@+id/image_book_cover"
-            android:layout_width="100dp"
+            android:layout_width="88dp"
             android:layout_height="140dp"
             android:layout_gravity="center_vertical"
             android:clickable="true"
@@ -71,19 +86,6 @@
             android:gravity="end|center_vertical"
             android:orientation="horizontal">
 
-            <Button
-                android:id="@+id/button"
-                android:layout_width="wrap_content"
-                android:layout_height="40dp"
-                android:layout_gravity="end"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="0dp"
-                android:background="@drawable/rounded_button"
-                android:backgroundTint="#DDDDDD"
-                android:paddingHorizontal="16dp"
-                android:text="책 등록하기"
-                android:textColor="#000000"
-                android:textStyle="bold" />
         </LinearLayout>
     </LinearLayout>
 
@@ -119,6 +121,7 @@
         android:layout_marginBottom="12dp"
         android:backgroundTint="#E0E0E0"
         android:text="등록"
+        android:textColor="@color/black"
         android:id="@+id/button_search"
         android:textStyle="bold" />
 
@@ -143,6 +146,7 @@
             android:orientation="vertical">
 
             <ImageView
+                android:id="@+id/ic_home"
                 android:layout_width="56dp"
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_home" />
@@ -156,6 +160,7 @@
             android:orientation="vertical">
 
             <ImageView
+                android:id="@+id/ic_note"
                 android:layout_width="56dp"
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_note" />
