--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -70,7 +70,7 @@
             android:id="@+id/bookTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="책 제목"
+            android:text=""
             android:textSize="14sp"
             android:textStyle="bold"
             android:layout_marginTop="8dp"
