메인 오류 수정

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -81,13 +81,13 @@
 
                 <TextView
                     android:id="@+id/bookTitle"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text=""
                     android:textSize="14sp"
                     android:textStyle="bold"
                     android:layout_marginTop="8dp"
-                    android:gravity="center"
+                    android:gravity="center_horizontal"
                     android:textAlignment="center" />
             </LinearLayout>
 
