--- a/app/src/main/res/layout/quiz_1.xml
+++ b/app/src/main/res/layout/quiz_1.xml
@@ -24,21 +24,24 @@
         android:background="#DDDDDD" />
 
     <!-- 문제 영역 -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="백설공주는 12시가 되기 전\n집에 가야한다"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        android:gravity="center"
-        android:padding="24dp"
-        android:layout_marginTop="64dp"
-        android:layout_marginHorizontal="24dp"
-        android:textColor="#333333"
-        android:backgroundTint="#EEEEEE"
-        android:background="@drawable/quiz_box" />
 
     <!-- 여백 -->
+
+    <TextView
+        android:id="@+id/quiz_question"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="24dp"
+        android:layout_marginTop="64dp"
+        android:background="@drawable/quiz_box"
+        android:backgroundTint="#EEEEEE"
+        android:gravity="center"
+        android:padding="24dp"
+        android:text=""
+        android:textColor="#333333"
+        android:textSize="18sp"
+        android:textStyle="bold" />
+
     <View
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -56,7 +59,9 @@
         <!-- O 버튼 -->
 
         <!-- X 버튼 -->
+
         <Button
+            android:id="@+id/quiz_o"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_marginEnd="32dp"
@@ -67,6 +72,7 @@
             android:textSize="32sp" />
 
         <Button
+            android:id="@+id/quiz_x"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:background="@drawable/circle_button_red"
